--- a/vignettes/Development/Quality control/Publication/Molecular_verification_acid.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular_verification_acid.Rmd
@@ -14,15 +14,15 @@ options(dplyr.summarise.inform=FALSE)
 knitr::opts_chunk$set(echo = TRUE, fig.width = 14, fig.height = 8)
 ```
 
-This vignette demonstrates the verification process of SimpleBox
+*This vignette demonstrates the verification process of SimpleBox
 implemented in R (version 2024.8.0) and in an Excel^TM^ spreadsheet (xl
 v4.0.5). To do this the 1^st^ order rate constants (k's) and steady
 state masses are compared between the two model implementations. The
 differences should be negligible and only based on rounding errors. In
 this case we choose a relative difference of the k's or masses between
-the models to not exceed 0.1%.
+the models to not exceed 0.1%.*
 
-# Verification method
+# *Verification method*
 
 ```{r Initialize,include=TRUE, echo=TRUE, message=FALSE, warning=FALSE}
 # Create a list with the names of substances
@@ -40,12 +40,12 @@ source("baseScripts/initWorld_onlyMolec.R")
 World$substance <- substance
 ```
 
-The SBoo world is initialized for a substance. In this case, that
+*The SBoo world is initialized for a substance. In this case, that
 substance is `r World$fetchData("Substance")`, which is of class:
-`r World$fetchData("ChemClass")`.
+`r World$fetchData("ChemClass")`.*
 
-At release already improvements or developments have been implemented in
-the R version of SimpleBox (SBoo) which are not implemented in Excel
+*At release already improvements or developments have been implemented
+in the R version of SimpleBox (SBoo) which are not implemented in Excel
 which will result in differences between the spreadsheet and R
 implementation. For this reason a TEST variable has been introduced to
 the changed algorithms in R in order to verify the outcome of SimpleBox
@@ -53,22 +53,22 @@ in R with the original implementation in the spreadsheet version. So,
 TEST variable is a boolean, that can be used to calculate some processes
 in R the same way as in excel for the verification without removing the
 improvements that are made. For this reason we show the verification in
-two steps:
+two steps:*
 
-1.  Compare k's and steady state masses of SBoo with updates to the
-    spreadsheet.
+1.  *Compare k's and steady state masses of SBoo with updates to the
+    spreadsheet.*
 
-2.  Compare k's and steady state masses of adapted SBoo using TEST
-    variable to the spreadsheet.
+2.  *Compare k's and steady state masses of adapted SBoo using TEST
+    variable to the spreadsheet.*
 
-When comparing k's and steady state masses between SimpleBox in R and
+*When comparing k's and steady state masses between SimpleBox in R and
 Excel^TM^, the goal is that the relative difference is less than 0.1
 percent for each k and steady state mass. The reason is that smaller
 differences are almost inevitable due to differences in rounding values
 between excel and R, and not the result of mistakes in calculations or
-input values.
+input values.*
 
-# Step 1. Compare SBoo (incl. updates) to spreadsheet
+# *Step 1. Compare SBoo (incl. updates) to spreadsheet*
 
 ```{r data xlsx and R, echo=FALSE, warning=FALSE}
 #Comparing K's from R model to K's from excel model
@@ -162,34 +162,34 @@ mergedkaas$diff <- mergedkaas$k_R - mergedkaas$k_Excel #compare R k to Excel K
 mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)  
 ```
 
-## preliminary matrix check
+## *preliminary matrix check*
 
-In the chunk below we check if our matrix is as large as we expect it to
-be.
+*In the chunk below we check if our matrix is as large as we expect it
+to be.*
 
-i)  Matrix The SimpleBox model operates over 5 scales, 12
+i)  *Matrix The SimpleBox model operates over 5 scales, 12
     subcompartments and 4 different speciations. For molecules, this is
     already filtered to only include one species: Unbound. As such, we
     would expect our matrix to have 5 \* 12 \* 1 = 60 rows. However,
-    some exceptions exist within our SB world:
+    some exceptions exist within our SB world:*
 
--   The Regional and Continental scale do now have a deepocean layer
-    (w3), reducing the matrix by 2 \* 1 = 2 rows.
--   The Global Scales (Arctic, Moderate, Tropic) only have one type of
-    soil instead of 3, reducing the matrix by 3 \* 2 = 6 rows.
--   The Global Scales (Arctic, Moderate, Tropic) only have one type of
-    sediment instead of 3, reducing the matrix by 3 \* 2 = 6 rows.
--   The Global Scales (Arctic, Moderate, Tropic) only have one type of
-    water instead of 3, reducing the matrix by 3 \* 2 = 6 rows.
--   Cloudwater (compartment) does not have any values, reducing our
-    matrix by 5 \* 1 \* 1 = 5 rows.
+-   *The Regional and Continental scale do now have a deepocean layer
+    (w3), reducing the matrix by 2 \* 1 = 2 rows.*
+-   *The Global Scales (Arctic, Moderate, Tropic) only have one type of
+    soil instead of 3, reducing the matrix by 3 \* 2 = 6 rows.*
+-   *The Global Scales (Arctic, Moderate, Tropic) only have one type of
+    sediment instead of 3, reducing the matrix by 3 \* 2 = 6 rows.*
+-   *The Global Scales (Arctic, Moderate, Tropic) only have one type of
+    water instead of 3, reducing the matrix by 3 \* 2 = 6 rows.*
+-   *Cloudwater (compartment) does not have any values, reducing our
+    matrix by 5 \* 1 \* 1 = 5 rows.*
 
-With these exceptions, we expect our matrix to be 60- 25 = 35 rows. This
-script will stop running if this is not the case.
+*With these exceptions, we expect our matrix to be 60- 25 = 35 rows.
+This script will stop running if this is not the case.*
 
-ii) We expect all processes to be included in Processes4SpeciesTp.csv to
-    also be calculated. Therefore, we compare the calculated unique
-    processes with the processes defined in this csv.
+ii) *We expect all processes to be included in Processes4SpeciesTp.csv
+    to also be calculated. Therefore, we compare the calculated unique
+    processes with the processes defined in this csv.*
 
 ```{r check if matrix is 155x155, include=TRUE, echo=FALSE, warning=FALSE}
 dims <- dim(diagonal_R)
@@ -233,29 +233,29 @@ if (!setequal(Functions, world_processes)) {
 
 ```
 
-## Compare k's
+## *Compare k's*
 
-When comparing k's between R and excel, the goal is that the relative
+*When comparing k's between R and excel, the goal is that the relative
 difference is less than 1 percentile for each k. The reason is that
 smaller differences often are a result of differences in rounding values
 between excel and R, and not the result of mistakes in calculations or
 different input values. In this vignette two types of k's are compared:
-diagonal k's and from-to k's.
+diagonal k's and from-to k's.*
 
-At the time of this verification, some improvements were already made in
-the R version versus the excel version. This meant that some k's differ
-between R and excel, but not because the calculations or input values
-are wrong. In order to still be able to compare the two versions, the
-'Test' variable was created. This variable is a boolean that can be used
-to calculate some processes in R the same way as in excel for the
+*At the time of this verification, some improvements were already made
+in the R version versus the excel version. This meant that some k's
+differ between R and excel, but not because the calculations or input
+values are wrong. In order to still be able to compare the two versions,
+the 'Test' variable was created. This variable is a boolean that can be
+used to calculate some processes in R the same way as in excel for the
 verification without removing the improvements that are made. When this
-test variable was used and why will be explained below.
+test variable was used and why will be explained below.*
 
-### Diagonal k's
+### *Diagonal k's*
 
-Diagonal k's are k's that are on the diagonal of the k matrix. They are
+*Diagonal k's are k's that are on the diagonal of the k matrix. They are
 calculated as the sum of all the k's leaving the subcompartment plus the
-sum of the removal process k's (i.e. degradation or burial).
+sum of the removal process k's (i.e. degradation or burial).*
 
 ```{r PlotsDiagonalk_1,fig.cap = "Figure 1: Relative differences sum of from-k's between R and Spreadsheet implementation of SimpleBox (Test=FALSE)", echo=FALSE, warning=FALSE}
 
@@ -290,10 +290,10 @@ ggplot(merged_diagonal, aes(x = from, y = reldif)) +
   labs(x = "from", y = "Relative diff")
 ```
 
-Figures 1 and 2 above show the absolute and relative differences in
+*Figures 1 and 2 above show the absolute and relative differences in
 diagonal k's between R and excel. As can be seen in Figure 2, relative
 differences larger than 1 percentile are in the lake, freshwater and
-sediment subcompartments.
+sediment subcompartments.*
 
 ```{r filter large diagonal differences, include=FALSE, echo=FALSE}
 diagonal_diffs <- merged_diagonal |>
@@ -302,38 +302,38 @@ diagonal_diffs <- merged_diagonal |>
   arrange(desc(reldif))
 ```
 
-#### Lake difference
+#### *Lake difference*
 
-The relative difference in lake removal rate is caused by lake
+*The relative difference in lake removal rate is caused by lake
 sedimentation being included in R but not in excel. To make an accurate
 comparison between R and excel, the Test variable was used to exclude
 flows from lake to lakesediment in the processes k_Sedimentation and
-k_Adsorption.
+k_Adsorption.*
 
-#### Settling velocity
+#### *Settling velocity*
 
-The difference in the diagonal k's for sedimentation comes from a
-difference in k's for the sedimentation and resuspension processes.
+*The difference in the diagonal k's for sedimentation comes from a
+difference in k's for the sedimentation and resuspension processes.*
 
-This is caused by the use of different formulas to calculate settling
+*This is caused by the use of different formulas to calculate settling
 velocity between excel and R. In excel, settling velocity is always
-calculated as:
+calculated as:*
 
-`SetVel <- 2.5/(24*3600)`
+*`SetVel <- 2.5/(24*3600)`*
 
-While in R, an improved version of this formula is used:
+*While in R, an improved version of this formula is used:*
 
-`SetVel <- 2*(radius^2*(rhoParticle-rhoWater)*GN) / (9*DynViscWaterStandard)`
+*`SetVel <- 2*(radius^2*(rhoParticle-rhoWater)*GN) / (9*DynViscWaterStandard)`*
 
-Using the Test variable, the settling velocity formula is temporarily
+*Using the Test variable, the settling velocity formula is temporarily
 changed to the formula used in excel for the resuspension ans
 sedimentation processes (K_resuspension and k_Sedimentation). This
 solves the differences in diagonal k's related to resuspension or
-sedimentation.
+sedimentation.*
 
-#### Degradation
+#### *Degradation*
 
-For some substances, the bulk standard degradation rate constant for
+*For some substances, the bulk standard degradation rate constant for
 air/water/soil/sediment (kdeg) has an input value, while for other
 substances this value is calculated. When an input value is available,
 this value has 2 decimals in R but more decimals in excel. This can
@@ -341,9 +341,9 @@ cause slight differences the k's where this value is used. Therefore,
 these values were rounded in the test files that were used for
 comparison to the R output. There is an
 [issue](https://github.com/rivm-syso/SBoo/issues/158) to fix this in a
-future SBooScript update.
+future SBooScript update.*
 
-### From-to k's
+### *From-to k's*
 
 ```{r PlotFromTok_1, echo=FALSE, warning=FALSE, fig.cap="Figure 2: Relative differences from-to k's between R and Spreadsheet implementation of SimpleBox (Test=FALSE)"}
 # "To" and "from" in one plot
@@ -368,8 +368,8 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
   )
 ```
 
-We can filter out the exact k's that have a relative difference larger
-than 0.1%:
+*We can filter out the exact k's that have a relative difference larger
+than 0.1%:*
 
 ```{r TableDifferences, echo=FALSE, message=FALSE, warning=FALSE, paged.print=TRUE}
 mergedkaas |>
@@ -378,16 +378,16 @@ mergedkaas |>
   arrange(desc(relDif)) |> knitr::kable(digits = 30)
 ```
 
-#### Sedimentation and resuspension
+#### *Sedimentation and resuspension*
 
-As can be seen in Figure 2 and the table above, the k's that have a
+*As can be seen in Figure 2 and the table above, the k's that have a
 relative difference larger than 0.1% go from water to sediment or from
 sediment to water. Changing the formula for calculating settling
 velocity when Test = TRUE for the sedimentation and resuspension
 processes (explained above under 'Settling velocity') also solves these
-differences.
+differences.*
 
-### Steadystate mass
+### *Steadystate mass*
 
 ```{r PlotSteadyState_1, include= TRUE, echo= FALSE, warning=FALSE, fig.cap="Figure 3: Relative differences in steady state mass per compartment between R (SB1solve) and Spreadsheet implementation of SimpleBox (Test=FALSE)"}
 
@@ -442,16 +442,16 @@ ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
   custom_theme()
 ```
 
-The differences in k's drives the model output: the steady state mass.
+*The differences in k's drives the model output: the steady state mass.
 So a final check is to see how much the steady state masses differ
 between both implementations of SimpleBox (Figure 3). From this it is
 clear that there are differences up to
-`r merged_SS_SB1$reldiff |> abs() |> max() |> round(digits=3)*100`%.
+`r merged_SS_SB1$reldiff |> abs() |> max() |> round(digits=3)*100`%.*
 
-# Step 2. Compare SBoo and Spreadsheet excluding updates (Test=TRUE)
+# *Step 2. Compare SBoo and Spreadsheet excluding updates (Test=TRUE)*
 
-Now the value for the Test variable can be changed to TRUE, and the
-difference in k's between excel and R can be tested again:
+*Now the value for the Test variable can be changed to TRUE, and the
+difference in k's between excel and R can be tested again:*
 
 ```{r comparison_2, include=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
 World$SetConst(Test = "TRUE")
@@ -537,7 +537,7 @@ mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)
 
 ```
 
-## Compare first order rate constants
+## *Compare first order rate constants*
 
 ```{r PlotDiagonalk_2, fig.cap = "Figure 4: Relative differences sum of from-k's between R and Spreadsheet implementation of SimpleBox (Test=TRUE)", include=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
 # Plot of relative differences of the diagonals per compartment
@@ -563,12 +563,12 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
   )
 ```
 
-As can be seen in Figures 4 and 5, the temporary changes made using the
+*As can be seen in Figures 4 and 5, the temporary changes made using the
 Test variable solved the large differences in k's between R and excel
 for both the diagonal and the from-to k's. All relative differences are
-now smaller than 1 percentile.
+now smaller than 1 percentile.*
 
-## Steadystate mass
+## *Steadystate mass*
 
 ```{r PlotSteadyState_2, include= TRUE, echo= FALSE, warning=FALSE, fig.cap="Figure 6: Relative differences in steady state mass per compartment between R (SB1solve) and Spreadsheet implementation of SimpleBox (Test=TRUE)"}
 
@@ -623,7 +623,7 @@ ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
   custom_theme()
 ```
 
-To test if the small differences (\<0.1%) in first order rate constants
+*To test if the small differences (\<0.1%) in first order rate constants
 is negligible (Figures 4 and 5), the steady state masses should also not
 differ by more than 0.1% between the R and Spreadsheet implementations
 of SimpleBox. This is indeed the case (Figure 6) as the max difference
@@ -631,40 +631,100 @@ in now only
 `r merged_SS_SB1$reldiff |> abs() |> max() |> round(digits=5)*100`%.
 This proves that the port of SimpleBox to R is successful in reproducing
 the results from the original spreadsheet implementation for chemicals
-of class `r World$fetchData("ChemClass")`.
+of class `r World$fetchData("ChemClass")`.*
 
-# Step 3. Verify dynamic solver
+# *Step 3. Verify dynamic solver*
 
-The dynamic solver can use time explicit emissions and provide masses or
-concentration in time. This shows the increase in mass in each
+*The dynamic solver can use time explicit emissions and provide masses
+or concentration in time. This shows the increase in mass in each
 compartment in time based on a specified emission, see
 [here](vignettes/10.0-Solver-use.md "Solver documentation") for more
 details. Here we verify that with constant emission in time the steady
-state mass is approached.
+state mass is approached.*
 
 ```{r}
 
 emissions <- 
   # create emission scenario in time:
-  data.frame(Emis = c(10000,10000,0,0), # emission in kg/s
-             Time = c(0,9,10,20))  # years from start
+  data.frame(Emis = c(10000,10000,0,0), # emission in kg/year
+             Time = c(0,100,110,150))  # years from start
 # apply emission scenario to intended species and compartments using hte Abbr:
 emissions <- merge(emissions, data.frame(Abbr = c("aRU", "s2RU", "w1RU")))
 
-# convert time to seconds
+# convert time to seconds and emission to kg/s
 emissions <- emissions |>
-  mutate(Emis = Emis,
+  mutate(Emis = Emis*1000/(MW*365.25*24*60*60),
     Time = Time*(365.25*24*60*60)) |> ungroup()
 
 
 tmax <- max(emissions$Time) # set max solve time to last step in emission scenario
+tmin <- min(emissions$Time)
 nTIMES <- 1+max(emissions$Time)/(365.25*24*60*60) # Sets the time step for output, e.g. for 20 year scenario, add t0 is 21 nTimes
+
 
 # Initialize the dynamic solver
 World$NewSolver("DynamicSolver")
-World$Solve(emissions = emissions, tmax = tmax, nTIMES = nTIMES)
-solution <- World$Masses()
+World$Solve(emissions = emissions, tmin = tmin, tmax = tmax, nTIMES = nTIMES)
+
+masses <- World$Masses()
 emission <- World$Emissions()
 concentration <- World$Concentration()
+
+World$PlotMasses()
+World$PlotConcentration()
+
+SSsolveD.R <- 
+  masses |> 
+  left_join(World$states$asDataFrame, by="Abbr") |>
+  mutate(Abbr =  paste0(accronym_map[SubCompart], 
+                            accronym_map2[Scale])) |>
+  mutate(SubCompart = str_replace(SubCompart, "lakesediment", "lake")) |>
+  mutate(Abbr = str_replace(Abbr, "sd0R", "w0R")) |>
+  mutate(Abbr = str_replace(Abbr, "sd0C", "w0C")) |>
+  group_by(Scale, SubCompart, Species, Abbr,time) |>
+  summarise(Dynamic_Mass_kg = sum(Mass_kg))
+
+# calculate time to steady state
+Time2SteadyState <- 
+  SSsolveD.R |> 
+  left_join(SSsolve.R |> 
+              mutate(SS_Mass_kg=Mass_kg,
+                     .keep = "unused")) |> 
+  mutate(FractionSS = Dynamic_Mass_kg/SS_Mass_kg) |> 
+  filter(FractionSS > 0.99) |> 
+  ungroup() |> 
+  group_by(Abbr) |> 
+  summarise(SS_time_y = min(as.numeric(time))/(365.25*24*60*60)) |> 
+  arrange(desc(SS_time_y))
+  
+barplot(SS_time_y ~ Abbr, data=Time2SteadyState, las = 2)
+
+World$nodelist
+
+ggplot(Time2SteadyState, aes(x = reorder(Abbr, -SS_time_y), y = SS_time_y)) +
+  geom_bar(stat = "identity") +
+  ggtitle(paste0( substance))+
+  labs(x = "Compartment",
+       y = "Time to steady state (years)")+
+    custom_theme()
+
+if(length(unique(Time2SteadyState$Abbr)) != length(unique(SSsolve.R$Abbr))){
+  warning(paste("Not all compartments reaching steady state within",max(as.numeric(SSsolveD.R$time))/(365.25*24*60*60),"years"))
+}
+
+test_dynamic_1 <- 
+ SSsolveD.R |> 
+  left_join(SSsolve.R |> 
+              mutate(SS_Mass_kg=Mass_kg,
+                     .keep = "unused")) |> 
+  mutate(FractionSS = Dynamic_Mass_kg/SS_Mass_kg) |> 
+  filter(FractionSS > 0.999)
+
+test_dynamic_2 <- test_dynamic_1 |> 
+   filter(FractionSS > 1.001)
+
+if(length(test_dynamic_2$Abbr)>0){
+  stop(paste0("Compartment ",test_dynamic$Abbr,"exceeding steady state"))
+}
 
 ```
