--- a/vignettes/10.0-Solver-use.md
+++ b/vignettes/10.0-Solver-use.md
@@ -1,27 +1,27 @@
 SBoo Solver use
 ================
 Anne Hids, Jaap Slootweg, Joris Quik
-2025-03-25
+2025-03-26
 
-SimpleBox (SBoo) has specific solvers available that allow running the
+*SimpleBox (SBoo) has specific solvers available that allow running the
 model deterministic or probabilistic. We assume you already understand
 the basics of using SimpleBox and have an idea of what input variables
 or emissions you want to input with a certain degree of uncertainty or
-variability. There are basically two types of solvers to use here:
+variability. There are basically two types of solvers to use here:*
 
-1.  SteadyState solver for calculating the steady state mass at infinite
-    time horizon (deterministic or probabilistic).
-2.  DynamicSolver for calculating the time explicit mass based on a
+1.  *SteadyState solver for calculating the steady state mass at
+    infinite time horizon (deterministic or probabilistic).*
+2.  *DynamicSolver for calculating the time explicit mass based on a
     constant or time varying emission scenario (deterministic or
-    probabilistic).
+    probabilistic).*
 
-Below is are examples of using the SteadyState or Dynamic solvers both
-deterministically or probabilistically.
+*Below is are examples of using the SteadyState or Dynamic solvers both
+deterministically or probabilistically.*
 
-## Requirements
+## *Requirements*
 
-First, we will load the necessary packages and initialize the world for
-molecules.
+*First, we will load the necessary packages and initialize the world for
+molecules.*
 
 ``` r
 library(lhs)
@@ -32,43 +32,43 @@ library(gridExtra)
 source("baseScripts/initWorld_onlyMolec.R")
 ```
 
-If you would like to instead initialize the World for particulates or
-microplastics, use:
+*If you would like to instead initialize the World for particulates or
+microplastics, use:*
 
-- source(“baseScripts/initWorld_onlyParticulate.R”)
+- *source(“baseScripts/initWorld_onlyParticulate.R”)*
 
-- source(“baseScripts/initWorld_onlyMicroplastics.R”)
+- *source(“baseScripts/initWorld_onlyMicroplastics.R”)*
 
-# Steady state solver
+# *Steady state solver*
 
-A steady state solver calculates the masses in each environmental
+*A steady state solver calculates the masses in each environmental
 compartment (i.e. air, riverwater, naturalsoil) at each scale (i.e.
 Regional, Continental) and for each species (U, S, A, P) when the system
 has reached an equilibrium of in- and outflows from a compartment
-reaching steady state.
+reaching steady state.*
 
-There are two ways to use the steady state solver: deterministic (solve
+*There are two ways to use the steady state solver: deterministic (solve
 once with one set of emissions and one set of substance/landscape
 variables), or probabilistic (solve multiple times, once for each run
-with uncertain substance variables and optionally uncertain emissions).
+with uncertain substance variables and optionally uncertain emissions).*
 
-## Use the steady state solver deterministically
+## *Use the steady state solver deterministically*
 
-We already initialized the World in the previous chunk. This is not done
-for a specific substances, the World was initialized for a ‘default
-substance’, which behaves as a molecule.
+*We already initialized the World in the previous chunk. This is not
+done for a specific substances, the World was initialized for a ‘default
+substance’, which behaves as a molecule.*
 
-As we will not vary any substance variables when using the deterministic
-steady state solver, we only need to make a dataframe containing the
-emissions for 1 or more emission compartments. This dataframe should
-contain two columns:
+*As we will not vary any substance variables when using the
+deterministic steady state solver, we only need to make a dataframe
+containing the emissions for 1 or more emission compartments. This
+dataframe should contain two columns:*
 
-- ‘Abbr’, which contains the abbreviations for the compartments
+- *‘Abbr’, which contains the abbreviations for the compartments*
 
-- ‘Emis’, which contains the emissions to the compartments, in kg/s.
+- *‘Emis’, which contains the emissions to the compartments, in kg/s.*
 
-To see the abbreviations and their meaning, you can run
-\`World\$states\$asDataFrame\`.
+*To see the abbreviations and their meaning, you can run
+\`World\$states\$asDataFrame\`.*
 
 ``` r
 # Create the steady state emission dataframe
@@ -79,25 +79,25 @@ emissions <- emissions |>
   mutate(Emis = Emis*1000/(365*24*60*60)) 
 ```
 
-Now we will initialize the solver, with is “SteadyStateSolver” for all
+*Now we will initialize the solver, with is “SteadyStateSolver” for all
 steady state calculations. Consequently, we will use the `World$Solve()`
 function to calculate the masses in each compartment. The input to
 `World$Solve()` depends on the selected solver, but always requires the
 `emissions` to be defined, other parameters are needed when solving
-probabilisticaly, see below.
+probabilisticaly, see below.*
 
 ``` r
-# Define the solver function to use. For steady state calculations, this is always "SteadyODE"
+# Define the solver function to use. For steady state calculations, this is always "SteadyStateSolver"
 World$NewSolver("SteadyStateSolver")
 
 # Solve with the emissions we defined in the previous chunk
 World$Solve(emissions = emissions)
 ```
 
-Finally we can retrieve the masses and concentrations in each
+*Finally we can retrieve the masses and concentrations in each
 compartment from the World object by using `World$Masses()` and
 `World$Concentration()`. You can also retrieve the used emissions:
-`World$Emissions()`.
+`World$Emissions()`.*
 
 ``` r
 # Get the solution(=mass per compartment), emissions and concentrations from 'World'
@@ -106,10 +106,10 @@ emission <- World$Emissions()
 concentration <- World$Concentration()
 ```
 
-Finally, we can plot the outcome using the predefined plot functions. If
-there is no scale specified, the Regional scale will be selected.
+*Finally, we can plot the outcome using the predefined plot functions.
+If there is no scale specified, the Regional scale will be selected.
 Selecting one or more subcomparts is optional. If no subcomparts are
-given, the outcome is plotted for all subcomparts.
+given, the outcome is plotted for all subcomparts.*
 
 ``` r
 # Plot concentrations at regional scale
@@ -143,46 +143,47 @@ World$PlotMassDistribution(scale = "Regional")
     ## 1 1 (1-1,1-1) arrange gtable[layout]
     ## 2 2 (2-2,1-1) arrange gtable[layout]
 
-## Use the steady state solver probabilistically
+## *Use the steady state solver probabilistically*
 
-Here the steady state probabilistic solver is demonstrated for a generic
-microplastic particle.
+*Here the steady state probabilistic solver is demonstrated for a
+generic microplastic particle.*
 
-When the World is initialized for particulates or plastics, the
+*When the World is initialized for particulates or plastics, the
 emissions go to the “S”, “A” and/or “P” species (this is unlike
-emissions for molecules, where the emissions go to the “U” species).
+emissions for molecules, where the emissions go to the “U” species).*
 
-| Abbreviation | Full species name |
-|-------------:|-------------------|
-|            U | Unbound           |
-|            S | Solid             |
-|            A | Aggregated        |
-|            P | Attached          |
+| *Abbreviation* | *Full species name* |
+|---------------:|---------------------|
+|            *U* | *Unbound*           |
+|            *S* | *Solid*             |
+|            *A* | *Aggregated*        |
+|            *P* | *Attached*          |
 
-Table showing species abbreviations and the corresponding species names.
+*Table showing species abbreviations and the corresponding species
+names.*
 
 ``` r
 substance <- "microplastic"
 source('baseScripts/initWorld_onlyPlastics.R')
 ```
 
-For the probabilistic steady state solver, the emissions need to be
-given as a dataframe with three columns:
+*For the probabilistic steady state solver, the emissions need to be
+given as a dataframe with three columns:*
 
-- ‘Abbr’, which contains the abbreviations for the compartments
+- *‘Abbr’, which contains the abbreviations for the compartments*
 
-- ‘Emis’, which contains the emissions to the compartments, in kg/s
+- *‘Emis’, which contains the emissions to the compartments, in kg/s*
 
-- ‘RUN’, which contains the run number of the emission.
+- *‘RUN’, which contains the run number of the emission.*
 
-This example uses 20 output runs of a DPFMA (Dynamic Probabilistic
+*This example uses 20 output runs of a DPFMA (Dynamic Probabilistic
 Material Flow Analysis) model. This data is loaded first, and then
-transformed to the required format.
+transformed to the required format.*
 
-(Alternatively, if you want one set of emissions but vary the values for
-variables, you can use one emission dataframe as in the example for the
-deterministic steady state solver. Then the solver will use the same set
-of emissions for each run, but vary variable values.)
+*(Alternatively, if you want one set of emissions but vary the values
+for variables, you can use one emission dataframe as in the example for
+the deterministic steady state solver. Then the solver will use the same
+set of emissions for each run, but vary variable values.)*
 
 ``` r
 load("data/Examples/example_uncertain_data.RData")
@@ -204,42 +205,42 @@ example_data <- example_data |>
   select(-To_Compartment) # leave out original compartment name
 ```
 
-Variable values can be varied over runs by specifying the variable name,
-the type of distribution and distribution parameters (optionally also
-the Species, Scale and SubCompart). To see the variable names and which
-other variables are needed for the value, see i.e.
-`World$fetchData("kdeg")`.
+*Variable values can be varied over runs by specifying the variable
+name, the type of distribution and distribution parameters (optionally
+also the Species, Scale and SubCompart). To see the variable names and
+which other variables are needed for the value, see i.e.
+`World$fetchData("kdeg")`.*
 
-In the chunk below, an Excel file is read in containing the needed
+*In the chunk below, an Excel file is read in containing the needed
 values for 2 variables. Consequently, a distribution is created for each
-row in the dataframe.
+row in the dataframe.*
 
 ``` r
-# Load the Excel file containing example distributions for variablese
+# Load the Excel file containing example distributions for variables
 Example_vars <- readxl::read_xlsx("data/Examples/Example_uncertain_variables.xlsx", sheet = "Variable_data")
 
 varFuns <- World$makeInvFuns(Example_vars)
 ```
 
-Using the same SteadyStateSolver as above, World\$Solve needs some more
-parameters to run probabilistically:
+*Using the same SteadyStateSolver as above, World\$Solve needs some more
+parameters to run probabilistically:*
 
-- emissions: Dataframe with Emis (kg/s), RUN (1:n) and Abbr (SB
-  compartment abreviations)
+- *emissions: Dataframe with Emis (kg/s), RUN (1:n) and Abbr (SB
+  compartment abreviations)*
 
-- var_box_df: Dataframe with SB variable (varName), scope (Scale,
+- *var_box_df: Dataframe with SB variable (varName), scope (Scale,
   SubCompart, Species) and Distribution with relevant parameters (a, b,
-  c or d) defined.
+  c or d) defined.*
 
-- var_invFun: The relevant probability distribution functions using the
-  distribution specific parameters from var_box_df in a list
+- *var_invFun: The relevant probability distribution functions using the
+  distribution specific parameters from var_box_df in a list*
   <!--# Why this extra step? Either exchange the abc with the distribution function in a new var_infFun column in var_box_df. Now the link between the var_box_df and var_invFun is lost! -->
 
-- nRUNs: the number of runs (should match the number of RUNs in the
-  emissions dataframe provided).
+- *nRUNs: the number of runs (should match the number of RUNs in the
+  emissions dataframe provided).*
 
-Now we can solve and get the solution, variable values, concentration
-and emissions.
+*Now we can solve and get the solution, variable values, concentration
+and emissions.*
 
 ``` r
 # Call the steady state solver
@@ -255,7 +256,7 @@ concentration = World$Concentration()
 emission = World$Emissions()
 ```
 
-Finally, we can plot the outcome using the predefined plot functions.
+*Finally, we can plot the outcome using the predefined plot functions.*
 
 ``` r
 # Plot concentrations at regional scale
@@ -276,57 +277,6 @@ World$PlotMasses(scale = "Regional")
 World$PlotMassDistribution(scale = "Regional")
 ```
 
-    ## Called from: ProbSSMassDist(scale = scale)
-    ## debug: solution <- merge(World$Masses(), World$states$asDataFrame, by = "Abbr")
-    ## debug: if (length(scale) != 1) {
-    ##     stop("Please select 1 scale")
-    ## }
-    ## debug: if (!scale %in% unique(solution$Scale)) {
-    ##     stop("Selected scale does not exist")
-    ## }
-    ## debug: nRUNs = length(unique(solution$RUNs))
-    ## debug: solution <- ungroup(summarise(group_by(ungroup(summarise(group_by(ungroup(solution), 
-    ##     SubCompart, Scale, RUNs), Mass_kg = sum(Mass_kg))), SubCompart, 
-    ##     Scale), Mass_kg = mean(Mass_kg), n = n()))
-
-    ## debug: if (nRUNs != unique(solution$n)) {
-    ##     stop("nRUNs not equal to n in summarise")
-    ## }
-    ## debug: scale_solution <- summarise(group_by(solution, Scale), Mass_kg = sum(Mass_kg))
-    ## debug: scale_solution <- mutate(mutate(mutate(scale_solution, TotalMass = sum(Mass_kg)), 
-    ##     Mass_percent = round(((Mass_kg/TotalMass) * 100), 2)), Mass_percent_label = paste0(as.character(Mass_percent), 
-    ##     "%"))
-    ## debug: scale_plot <- ggplot(scale_solution, aes(area = Mass_kg, fill = Scale, 
-    ##     label = paste(Scale, Mass_percent_label, sep = "\n"))) + 
-    ##     geom_treemap() + geom_treemap_text(colour = "white", place = "centre", 
-    ##     size = 15) + scale_fill_discrete() + labs(title = paste0("Distribution of average steady state masses over scales")) + 
-    ##     theme(legend.position = "none")
-    ## debug: if (!is.null(scale)) {
-    ##     subcompart_solution <- solution[solution$Scale %in% scale, 
-    ##         ]
-    ## } else {
-    ##     subcompart_solution <- solution
-    ## }
-    ## debug: subcompart_solution <- solution[solution$Scale %in% scale, ]
-    ## debug: subcompart_solution <- mutate(mutate(mutate(subcompart_solution, 
-    ##     TotalMass = sum(Mass_kg)), Mass_percent = round(((Mass_kg/TotalMass) * 
-    ##     100), 2)), Mass_percent_label = paste0(as.character(Mass_percent), 
-    ##     "%"))
-    ## debug: subcompart_plot <- ggplot(subcompart_solution, aes(area = Mass_kg, 
-    ##     fill = SubCompart, label = paste(SubCompart, Mass_percent_label, 
-    ##         sep = "\n"))) + geom_treemap() + geom_treemap_text(colour = "white", 
-    ##     place = "centre", size = 15) + scale_fill_manual(values = subcompart_colors)
-    ## debug: if (!is.null(scale)) {
-    ##     subcompart_plot <- subcompart_plot + labs(title = paste0("Distribution of average steady state masses at ", 
-    ##         scale, " scale"))
-    ## } else {
-    ##     subcompart_plot <- subcompart_plot + labs(title = paste0("Distribution of average steady state masses at all scales"))
-    ## }
-    ## debug: subcompart_plot <- subcompart_plot + labs(title = paste0("Distribution of average steady state masses at ", 
-    ##     scale, " scale"))
-    ## debug: subcompart_plot <- subcompart_plot + theme(legend.position = "none")
-    ## debug: grid.arrange(scale_plot, subcompart_plot, ncol = 1)
-
 ![](10.0-Solver-use_files/figure-gfm/Plot%20the%20SS%20probabilistic%20outcome-3.png)<!-- -->
 
     ## TableGrob (2 x 1) "arrange": 2 grobs
@@ -338,57 +288,6 @@ World$PlotMassDistribution(scale = "Regional")
 World$PlotMassDistribution(scale = "Moderate")
 ```
 
-    ## Called from: ProbSSMassDist(scale = scale)
-    ## debug: solution <- merge(World$Masses(), World$states$asDataFrame, by = "Abbr")
-    ## debug: if (length(scale) != 1) {
-    ##     stop("Please select 1 scale")
-    ## }
-    ## debug: if (!scale %in% unique(solution$Scale)) {
-    ##     stop("Selected scale does not exist")
-    ## }
-    ## debug: nRUNs = length(unique(solution$RUNs))
-    ## debug: solution <- ungroup(summarise(group_by(ungroup(summarise(group_by(ungroup(solution), 
-    ##     SubCompart, Scale, RUNs), Mass_kg = sum(Mass_kg))), SubCompart, 
-    ##     Scale), Mass_kg = mean(Mass_kg), n = n()))
-
-    ## debug: if (nRUNs != unique(solution$n)) {
-    ##     stop("nRUNs not equal to n in summarise")
-    ## }
-    ## debug: scale_solution <- summarise(group_by(solution, Scale), Mass_kg = sum(Mass_kg))
-    ## debug: scale_solution <- mutate(mutate(mutate(scale_solution, TotalMass = sum(Mass_kg)), 
-    ##     Mass_percent = round(((Mass_kg/TotalMass) * 100), 2)), Mass_percent_label = paste0(as.character(Mass_percent), 
-    ##     "%"))
-    ## debug: scale_plot <- ggplot(scale_solution, aes(area = Mass_kg, fill = Scale, 
-    ##     label = paste(Scale, Mass_percent_label, sep = "\n"))) + 
-    ##     geom_treemap() + geom_treemap_text(colour = "white", place = "centre", 
-    ##     size = 15) + scale_fill_discrete() + labs(title = paste0("Distribution of average steady state masses over scales")) + 
-    ##     theme(legend.position = "none")
-    ## debug: if (!is.null(scale)) {
-    ##     subcompart_solution <- solution[solution$Scale %in% scale, 
-    ##         ]
-    ## } else {
-    ##     subcompart_solution <- solution
-    ## }
-    ## debug: subcompart_solution <- solution[solution$Scale %in% scale, ]
-    ## debug: subcompart_solution <- mutate(mutate(mutate(subcompart_solution, 
-    ##     TotalMass = sum(Mass_kg)), Mass_percent = round(((Mass_kg/TotalMass) * 
-    ##     100), 2)), Mass_percent_label = paste0(as.character(Mass_percent), 
-    ##     "%"))
-    ## debug: subcompart_plot <- ggplot(subcompart_solution, aes(area = Mass_kg, 
-    ##     fill = SubCompart, label = paste(SubCompart, Mass_percent_label, 
-    ##         sep = "\n"))) + geom_treemap() + geom_treemap_text(colour = "white", 
-    ##     place = "centre", size = 15) + scale_fill_manual(values = subcompart_colors)
-    ## debug: if (!is.null(scale)) {
-    ##     subcompart_plot <- subcompart_plot + labs(title = paste0("Distribution of average steady state masses at ", 
-    ##         scale, " scale"))
-    ## } else {
-    ##     subcompart_plot <- subcompart_plot + labs(title = paste0("Distribution of average steady state masses at all scales"))
-    ## }
-    ## debug: subcompart_plot <- subcompart_plot + labs(title = paste0("Distribution of average steady state masses at ", 
-    ##     scale, " scale"))
-    ## debug: subcompart_plot <- subcompart_plot + theme(legend.position = "none")
-    ## debug: grid.arrange(scale_plot, subcompart_plot, ncol = 1)
-
 ![](10.0-Solver-use_files/figure-gfm/Plot%20the%20SS%20probabilistic%20outcome-4.png)<!-- -->
 
     ## TableGrob (2 x 1) "arrange": 2 grobs
@@ -396,33 +295,33 @@ World$PlotMassDistribution(scale = "Moderate")
     ## 1 1 (1-1,1-1) arrange gtable[layout]
     ## 2 2 (2-2,1-1) arrange gtable[layout]
 
-### Steady state probabilistically with emissions as a set of probability distributions
+### *Steady state probabilistically with emissions as a set of probability distributions*
 
-In addition to the above example where the emissions are set as constant
-one can set the emission per RUN, for instance using probability
-distributions. World\$Solve needs the following variables to solve
-steady state probabilistically with a set of emission distributions (e.g
-normal, triangular).
+*In addition to the above example where the emissions are set as
+constant one can set the emission per RUN, for instance using
+probability distributions. World\$Solve needs the following variables to
+solve steady state probabilistically with a set of emission
+distributions (e.g normal, triangular).*
 <!--# The potential distributions need to be described somewhere and the variables a, b, c, d clearly documented, defined in fGeneral.R in SBoo. -->
 
-- emissions: a set of emission distributions
+- *emissions: a set of emission distributions*
 
-- var_box_df: a dataframe with the example variables
+- *var_box_df: a dataframe with the example variables*
 
-- var_invFun: the functions created from the var_box_df in a list
+- *var_invFun: the functions created from the var_box_df in a list*
 
-- nRUNs: the number of runs (should match the number of RUNs in the
-  emissions dataframe provided).
+- *nRUNs: the number of runs (should match the number of RUNs in the
+  emissions dataframe provided).*
 
-Now we can solve and get the solution, variable values, concentration
-and emissions.
+*Now we can solve and get the solution, variable values, concentration
+and emissions.*
 
-#### Prepare variable samples
+#### *Prepare variable samples*
 
-For each variable that is uncertain you can define the distribution type
-(triangular, uniform or normal) and the corresponding parameters. For
-this example, an example excel file will be read in containing the
-necessary parameters for the variables we want to vary.
+*For each variable that is uncertain you can define the distribution
+type (triangular, uniform or normal) and the corresponding parameters.
+For this example, an example excel file will be read in containing the
+necessary parameters for the variables we want to vary.*
 
 ``` r
 source("baseScripts/initWorld_onlyPlastics.R")  
@@ -434,10 +333,10 @@ Example_vars <- readxl::read_xlsx("data/Examples/Example_uncertain_variables.xls
 varFuns <- World$makeInvFuns(Example_vars)
 ```
 
-#### Prepare emission data
+#### *Prepare emission data*
 
-In this example, we will take a steady state emission data frame as the
-starting point for creating the triangular distributions.
+*In this example, we will take a steady state emission data frame as the
+starting point for creating the triangular distributions.*
 
 ``` r
 # Create the steady state emission dataframe 
@@ -447,10 +346,10 @@ emissions <- data.frame(Abbr = c("aRS", "s2RS", "w1RS"), Emis = c(10000, 10000, 
 emissions <- emissions |>   mutate(Emis = Emis*1000/(365*24*60*60))
 ```
 
-We can take the emission dataframe in the chunk above and define a
+*We can take the emission dataframe in the chunk above and define a
 (min), b (max) and c (peak) and the distribution type for each
 compartment. Consequently, the `World$makeInvFuns()` function is used to
-create the emission functions.
+create the emission functions.*
 
 ``` r
 emissions$a <- emissions$Emis * 0.7 
@@ -461,9 +360,9 @@ emisFuns <- World$makeInvFuns(emissions)
 names(emisFuns) <- emissions$Abbr
 ```
 
-Now we can solve and get the solution, variable values, concentration
+*Now we can solve and get the solution, variable values, concentration
 and emissions. We can also plot the outcome using the built-in plot
-functions.
+functions.*
 
 ``` r
 # The number of samples you want to pull from the distributions for each variable 
@@ -484,72 +383,73 @@ World$PlotConcentration()
 
 ![](10.0-Solver-use_files/figure-gfm/Test%20steady%20state%20uncertain%20solver-1.png)<!-- -->
 
-## Dynamic solver
+## *Dynamic solver*
 
-SimpleBox can also solve the K matrix with semi-dynamically using time
+*SimpleBox can also solve the K matrix with semi-dynamically using time
 variable emissions. To do this, one needs to use the DynamicSolver. This
-is demonstrated below or microplastics:
+is demonstrated below or microplastics:*
 
 ``` r
 source('baseScripts/initWorld_onlyPlastics.R')
 ```
 
-As in steady state, one can do dynamic analysis deterministically or
-probabilistically.
+*As in steady state, one can do dynamic analysis deterministically or
+probabilistically.*
 
-### Use the dynamic solver deterministically
+### *Use the dynamic solver deterministically*
 
-For the dynamic deterministic solver, the emissions need to be given as
-a dataframe with three columns:
+*For the dynamic deterministic solver, the emissions need to be given as
+a dataframe with three columns:*
 
-- ‘Abbr’, which contains the abbreviations for the compartments
+- *‘Abbr’, which contains the abbreviations for the compartments*
 
-- ‘Emis’, which contains the emissions to the compartments, in kg/s
+- *‘Emis’, which contains the emissions to the compartments, in kg/s*
 
-- ‘Time’, which contains the time of the emission in seconds.
+- *‘Time’, which contains the time of the emission in seconds.*
 
 ``` r
 # Initialize emissions in t/y
 emissions <- 
   # create emission scenario in time:
-  data.frame(Emis = c(10,20, 1,0,0), # emission in tones per year
+  data.frame(Emis = c(10,20, 1,0,0), # emission in tones per year (converted to kg/s later)
              Time = c(1,5,10,15,20))  # years from start
 # apply emission scenario to intended species and compartments using hte Abbr:
 emissions <- merge(emissions, data.frame(Abbr = c("aRS", "s2RS", "w1RS")))
 
 # convert 1 t/y to si units: kg/s
 emissions <- emissions |>
-  mutate(Emis = Emis*1000,
+  mutate(Emis = Emis*1000/(365.25*24*60*60),
     Time = Time*(365.25*24*60*60)) |> ungroup()
 ```
 
-World\$Solve needs the following variables to solve dynamically
-deterministically:
+*World\$Solve needs the following variables to solve dynamically
+deterministically:*
 
-- emissions: the emissions dataframe
+- *emissions: the emissions dataframe*
 
-- tmax: the end time for running the solver, in seconds
+- *tmax: the end time for running the solver, in seconds*
 
-- nTIMES: the number of calculation time steps.
+- *nTIMES: the number of calculation time steps.*
 
-Now we can solve and get the solution, concentration and emissions.
+*Now we can solve and get the solution, concentration and emissions.*
 
 ``` r
 tmax <- max(emissions$Time) # set max solve time to last step in emission scenario
-nTIMES <- 1+max(emissions$Time)/(365.25*24*60*60) # Sets the time step for output, e.g. for 20 year scenario, add t0 is 21 nTimes
+tmin <- min(emissions$Time)
+nTIMES <- 1+max(emissions$Time)/(365.25*24*60*60) # Sets the time step for output, e.g. for 19 year scenario from year 1 to 20, add t1 is 20 nTimes
 
 # Initialize the dynamic solver
 World$NewSolver("DynamicSolver")
-World$Solve(emissions = emissions, tmax = tmax, nTIMES = nTIMES)
+World$Solve(emissions = emissions, tmax = tmax, tmin=tmin, nTIMES = nTIMES)
 solution <- World$Masses()
 emission <- World$Emissions()
 concentration <- World$Concentration()
 ```
 
-Finally, we can plot the outcome using the predefined plot functions. If
-there is no scale specified, the Regional scale will be selected.
+*Finally, we can plot the outcome using the predefined plot functions.
+If there is no scale specified, the Regional scale will be selected.
 Selecting one or more subcomparts is optional. If no subcomparts are
-given, the outcome is plotted for all subcomparts.
+given, the outcome is plotted for all subcomparts.*
 
 ``` r
 # You can specify a scale and a subcompartment
@@ -576,25 +476,26 @@ World$PlotConcentration(scale = "Regional")
 # plot(emissions$Time,emissions$Emis)
 ```
 
-### Use the dynamic solver probabilistically
+### *Use the dynamic solver probabilistically*
 
-For the dynamic deterministic solver, the emissions need to be given as
-a dataframe with three columns:
+*For the dynamic deterministic solver, the emissions need to be given as
+a dataframe with three columns:*
 
-- ‘Abbr’, which contains the abbreviations for the compartments
+- *‘Abbr’, which contains the abbreviations for the compartments*
 
-- ‘Emis’, which contains the emissions to the compartments, in kg/s
+- *‘Emis’, which contains the emissions to the compartments, in kg/s*
 
-- ‘Time’, which contains the time of the emission in seconds,
+- *‘Time’, which contains the time of the emission in seconds,*
 
-- ‘RUN’, which contains the run number of the emission.
+- *‘RUN’, which contains the run number of the emission.*
 
 ``` r
 source('baseScripts/initWorld_onlyPlastics.R')
 
 load("data/Examples/example_uncertain_data.RData")
 
-example_data <- example_data |>
+example_data <- 
+  example_data |>
   select(To_Compartment, `2020`, `2021`,`2022`, `2023`, RUN) |>
   pivot_longer(!c(To_Compartment, RUN), names_to = "year", values_to = "Emis") |>
   mutate(Abbr = case_when(
@@ -603,13 +504,23 @@ example_data <- example_data |>
     To_Compartment == "Surface water (micro)" ~ "w1RS"
   )) |>
   select(-To_Compartment) |>
-  mutate(Time = ((as.numeric(year)-2019)*365.25*24*3600)) |>
+  mutate(Time = ((as.numeric(year))*365.25*24*3600)) |>
   mutate(Emis = (Emis*1000000)/(365.25*24*3600)) |> # Convert kt/year to kg/s
   select(-year)
+
+# The raw emission data from 2020 to 2023 will not solve due to unstability in the intital state starting at 0. This can be solved by starting at t=0 and mass=0 see below:
+
+example_data <-
+  example_data |> 
+  mutate(Time = Time - 2019*365.25*24*3600) |> # converting to 0 being one year before 2020
+  full_join(expand.grid(Abbr = unique(example_data$Abbr), 
+                        RUN = c(1:20)) |> 
+              mutate(Time = 0,
+                     Emis = 0))
 ```
 
-Prepare the variables the same way as used for the variables in the
-steady state probabilistic solver.
+*Prepare the variables the same way as used for the variables in the
+steady state probabilistic solver.*
 
 ``` r
 # Load the Excel file containing example distributions for variablese
@@ -618,33 +529,40 @@ Example_vars <- readxl::read_xlsx("data/Examples/Example_uncertain_variables.xls
 varFuns <- World$makeInvFuns(Example_vars)
 ```
 
-`World$Solve` needs the following variables to solve steady state
-probabilistically:
+*`World$Solve` needs the following variables to solve steady state
+probabilistically:*
 
-- emissions: the emissions dataframe
+- *emissions: the emissions dataframe*
 
-- var_box_df: a dataframe with the example variables
+- *var_box_df: a dataframe with the example variables*
 
-- var_invFun: the functions created from the var_box_df in a list
+- *var_invFun: the functions created from the var_box_df in a list*
 
-- nRUNs: the number of runs (should match the number of RUNs in the
-  emissions dataframe provided)
+- *nRUNs: the number of runs (should match the number of RUNs in the
+  emissions dataframe provided)*
 
-- tmax: the end time for running the solver, in seconds
+- *tmax: the end time for running the solver, in seconds*
 
-- nTIMES: the number of calculation time steps.
+- *nTIMES: the number of calculation time steps.*
 
-Now we can solve and get the solution, variable values, concentration
+*Now we can solve and get the solution, variable values, concentration
 and emissions. NOTE: These calculations take a bit longer than the
-previous calculations.
+previous calculations.*
 
 ``` r
 World$NewSolver("DynamicSolver")
 
-tmax <- 365.25*24*60*60*length(unique(example_data$Time))
+
+tmax <- max(unique(example_data$Time))
+tmin <- min(unique(example_data$Time))
 nTIMES <- length(seq(0, tmax, length.out = 10))
 
-World$Solve(emissions = example_data, var_box_df = Example_vars, var_invFun = varFuns, nRUNs = length(unique(example_data$RUN)), tmax = tmax, nTIMES = nTIMES)
+World$Solve(emissions = example_data, 
+            var_box_df = Example_vars, 
+            var_invFun = varFuns, 
+            nRUNs = length(unique(example_data$RUN)), tmin = tmin,
+            tmax = tmax, 
+            nTIMES = nTIMES)
 
 solution = World$Masses()
 emission = World$Emissions()
@@ -652,9 +570,9 @@ variable_values = World$VariableValues()
 concentrations = World$Concentration()
 ```
 
-Finally, we can plot the outcome using the predefined plot functions. If
-there is no scale specified, the Regional scale will be selected. If
-there is no subcompart specified, “agriculturalsoil” will be selected.
+*Finally, we can plot the outcome using the predefined plot functions.
+If there is no scale specified, the Regional scale will be selected. If
+there is no subcompart specified, “agriculturalsoil” will be selected.*
 
 ``` r
 World$PlotConcentration(scale = "Regional", subcompart = "agriculturalsoil")
